# NovyWave

./: .gitattributes  .gitignore  .mcp.example.json  .mcp.json  .novywave  .novywave_global  .novywave_global_example  .woodpecker.yml  ACTOR_RELAY_IMPROVEMENTS_ANALYSIS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENSE  MIGRATION_STATUS.md  Makefile.toml  MoonZoon.toml  NEXT_SESSION_SUMMARY.md  PROJECT.md  README.md  SECURITY.md  ai-memory.json  chrome-devtools-truncation-analysis.md  container-background-examples.html  container-background-techniques.md  debug_transition_issue.md  git-tools-truncation-research.md  investigate_wellen.rs  jwalk_benchmark.rs  nohup.out  package-lock.json  prompt_log.jsonl  prompter.json  recent_workspaces.json  test_jwalk_performance.js  test_loading_fix.sh  test_smart_labels  treeview-background-test.html  (+4 more)
.cargo/: config.toml
.claude/: ai-memory.json  (+4 more)
backend/: Cargo.toml
backend/crates/plugin_host/: Cargo.toml
backend/crates/plugin_host/src/: lib.rs  type_check.rs
backend/src/: main.rs  plugins.rs
frontend/: Cargo.toml  build.rs
frontend/js/: virtual-variables.js
frontend/src/: action_buttons.rs  app.rs  clipboard.rs  config.rs  config.rs.backup  connection.rs  debug_utils.rs  dragging.rs  error_display.rs  error_ui.rs  file_dialog.rs  file_management.rs  file_operations.rs  file_picker.rs  file_utils.rs  file_validation.rs  format_selection.rs  format_utils.rs  global_domains.rs  main.rs  main.rs.backup  panel_layout.rs  reactive_tree_test.rs  selected_variables.rs  selected_variables_layout.rs  selected_variables_panel.rs  signal_data_service.rs  signal_processing.rs  state.rs  test_api.rs  time_types.rs  tracked_files.rs  types.rs  unified_timeline_service.rs  utils.rs  variable_selection_ui.rs  views.rs  views.rs.backup  virtual_list.rs  virtual_list.rs.backup  (+1 more)
frontend/src/actors/: config_sync.rs  dialog_manager.rs  domain_bridges.rs  error_manager.rs  global_domains.rs  mod.rs  naming_validation.rs  panel_layout.rs  selected_variables.rs  selected_variables.rs.backup  testing.rs  tracked_files.rs  tracked_files.rs.backup  user_configuration.rs  variable_helpers.rs  variable_helpers.rs.backup  waveform_timeline.rs
frontend/src/config/: triggers.rs
frontend/src/dataflow/: actor.rs  actor_map.rs  actor_vec.rs  atom.rs  mod.rs  relay.rs
frontend/src/platform/: mod.rs  tauri.rs  web.rs  web.rs.backup
frontend/src/reactive_actors/: actor.rs  actor_btree_map.rs  actor_vec.rs  mod.rs  relay.rs  simple_state.rs
frontend/src/visualizer/: mod.rs
frontend/src/visualizer/canvas/: animation.rs  mod.rs  navigation.rs  rendering.rs  timeline.rs  timeline.rs.backup  transitions.rs  waveform_canvas.rs
frontend/src/visualizer/config/: mod.rs
frontend/src/visualizer/debug/: mod.rs
frontend/src/visualizer/formatting/: mod.rs  signal_values.rs
frontend/src/visualizer/integration/: mod.rs
frontend/src/visualizer/interaction/: dragging.rs  mod.rs
frontend/src/visualizer/state/: canvas_state.rs  mod.rs  timeline_state.rs
frontend/src/visualizer/testing/: actor_testing.rs  mod.rs
frontend/src/visualizer/timeline/: canvas_state.rs  cursor_animation.rs  maximum_timeline_range.rs  mod.rs  panning_controller.rs  time_domain.rs  time_types.rs  time_utils.rs  timeline_actor.rs  timeline_actor.rs.backup  timeline_actors.rs  timeline_cache.rs  timeline_service.rs  zoom_controller.rs
frontend/src/visualizer/ui/: mod.rs
frontend/src/visualizer/utils/: mod.rs
novyui/moonzoon-novyui/: .gitignore  Cargo.toml
novyui/moonzoon-novyui/src/: lib.rs
novyui/moonzoon-novyui/src/components/: accordion.rs  alert.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  fileinput.rs  icon.rs  input.rs  kbd.rs  list.rs  mod.rs  pattern.rs  select.rs  switch.rs  textarea.rs  treeview.rs  typography.rs
novyui/moonzoon-novyui/src/components/reactive_tree_view/: builder.rs  component.rs  context.rs  data_source.rs  differ.rs  dom_updater.rs  item_renderer.rs  mod.rs
novyui/moonzoon-novyui/src/tokens/: animation.rs  border.rs  color.rs  corner_radius.rs  focus.rs  mod.rs  opacity.rs  shadow.rs  theme.rs  typography.rs
novywave/: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile_debug  README.md  ai-memory.json
novywave-mcp/: Cargo.toml
novywave-mcp/extension/: background.js  console-capture.js  manifest.json  popup.html  popup.js
novywave-mcp/src/: lib.rs  main.rs
novywave-mcp/src/mcp/: mod.rs  tools.rs
novywave-mcp/src/verify/: config.rs  mod.rs  polling.rs  tests.rs
novywave-mcp/src/ws_server/: mod.rs  protocol.rs
novywave/ai-docs/: browser-mcp.md  session-context.md
novywave/backend/src/: main.rs
novywave/frontend/: Cargo.toml
novywave/frontend/src/: main.rs
novywave/mzoon/: .crates.toml  .crates2.json
novywave/novyui/moonzoon-novyui/: README.md
novywave/novyui/moonzoon-novyui/src/: lib.rs
novywave/novyui/moonzoon-novyui/src/components/: accordion.rs  alert.rs  avatar.rs  button.rs  checkbox.rs  icon.rs  input.rs  kbd.rs  select.rs  treeview.rs
novywave/novyui/moonzoon-novyui/src/tokens/: corner_radius.rs  focus.rs  mod.rs  opacity.rs  spacing.rs  theme.rs  typography.rs
novywave/src-tauri/: Cargo.toml  Makefile.toml  tauri.conf.json
novywave/src-tauri/src/: main.rs
plugins/files_discovery/: Cargo.toml
plugins/files_discovery/src/: bindings.rs  lib.rs
plugins/files_discovery/wit/: plugin.wit
plugins/hello_world/: Cargo.toml
plugins/hello_world/src/: bindings.rs  lib.rs
plugins/hello_world/wit/: plugin.wit
plugins/reload_watcher/: Cargo.toml
plugins/reload_watcher/src/: bindings.rs  lib.rs
plugins/reload_watcher/wit/: plugin.wit
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.dev.updater.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/dev-keys/: README.md  novywave-dev.key  novywave-dev.key.pub
src-tauri/src/: commands.rs  desktop_test_bridge.rs  lib.rs  update_policy.rs
test_files/mock-update-server/: Cargo.toml
test_files/mock-update-server/src/: main.rs
(+328 files in other folders)
