[workspace]
resolver = "3"
members = [
    "frontend",
    "backend",
    "backend/crates/plugin_host",
    "shared",
    "src-tauri",
    "plugins/hello_world",
    "plugins/reload_watcher",
    "plugins/files_discovery",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# zoon = { path = "../MoonZoon/crates/zoon" }
# moon = { path = "../MoonZoon/crates/moon" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "7c5178d891cf4afbc2bbbe864ca63588b6c10f2a" }
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "7c5178d891cf4afbc2bbbe864ca63588b6c10f2a" }

## Note: No workspace-wide wgpu patches are needed. Frontend uses Fast2D canvas path.
