[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
moon.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wellen = { path = "/home/martinkavik/repos/wellen/wellen" }
shared = { path = "../shared" }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
jwalk = "0.8"
