[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
moon.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wellen = { git = "https://github.com/MartinKavik/wellen", rev = "75de70c7e737432feacf91f8e803bfd62dccd39c" }
shared = { path = "../shared" }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
jwalk = "0.8"
memmap2 = "0.9"
rayon = "1.8"
plugin_host = { path = "crates/plugin_host" }
notify = "6"
notify-debouncer-mini = "0.4"
ignore = "0.4"
