[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }

[dependencies]
zoon.workspace = true
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.0"
fast2d = { git = "https://github.com/NovyWave/Fast2D", rev = "c84195b8a0053e9afdbb8c73f7ea41ef63f695c3", default-features = false, features = [
    # Choose one of the following rendering APIs:
    # "webgl",
    # "webgpu",
    "canvas",
] }
moonzoon-novyui = { path = "../novyui/moonzoon-novyui" }
web-sys = { version = "0.3", features = ["Performance", "Window", "console", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "Element", "HtmlElement", "DomRect", "Document", "HtmlHeadElement", "HtmlLinkElement", "Node", "Clipboard", "Navigator"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
shared = { path = "../shared" }
