[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
zoon.workspace = true
fast2d = { git = "https://github.com/NovyWave/Fast2D", rev = "c84195b8a0053e9afdbb8c73f7ea41ef63f695c3", default-features = false, features = [
    # Choose one of the following rendering APIs:
    # "webgl",
    # "webgpu",
    "canvas",
] }
moonzoon-novyui = { path = "../novyui/moonzoon-novyui" }
