[package]
name = "files_discovery_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "novywave:files-discovery"

[package.metadata.component.target]
path = "./wit"
world = "plugin"
