[package]
name = "hello_world_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
once_cell = "1.21"

[package.metadata.component]
package = "novywave:hello-world"

[package.metadata.component.target]
path = "./wit"
world = "plugin"
