[package]
name = "reload_watcher_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "novywave:reload-watcher"

[package.metadata.component.target]
path = "./wit"
world = "plugin"
