[package]
name = "mock-update-server"
version = "0.1.0"
edition = "2021"
description = "Mock server for testing NovyWave's Tauri updater"

# Exclude from main NovyWave workspace - standalone test utility
[workspace]

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
